<resources>
    <string name="app_name">To Do</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="add_task">Add Task</string>
    <string name="incomplete_task">Incomplete Task</string>
    <string name="complete_task">Complete Task</string>
    <string name="date">Date</string>
    <string name="task_id">taskId</string>
    <string name="task_status">taskStatus</string>
    <string name="help">help</string>
</resources>
