<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/taskId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_id"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/taskStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/task_status"
        android:textAlignment="center"
        android:visibility="gone" />

    <TextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:background="#ec736a"
        android:padding="10dp"
        android:text="@string/date"
        android:textAlignment="center" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:text="@string/title" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/description"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/description"
            android:padding="10dp" />

        <ImageView
            android:id="@+id/status"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:background="@drawable/ic_action_inc"
            android:clickable="true"
            android:contentDescription="@string/incomplete_task"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp" />
    </RelativeLayout>

    <TextView
        android:id="@+id/timestamp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/date"
        android:padding="10dp" />

</LinearLayout>
<!--
A layout that arranges other views either horizontally in a single column or vertically in a single row.
Displays image resources, for example Bitmap or Drawable resources. ImageView is also commonly used to apply tints to an image and handle image scaling.-->